--- a/app/src/main/res/layout/item_prayer_with_title.xml
+++ b/app/src/main/res/layout/item_prayer_with_title.xml
@@ -2,10 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
+    <View
+        android:id="@+id/item_prayer_day_divider"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/divider"
+        android:background="@color/divider_black"
+        android:visibility="gone"
+        tools:ignore="RtlSymmetry" />
+
     <TextView
-        android:id="@+id/prayers_schedule_sub_header"
+        android:id="@+id/prayers_schedule_sub_header_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
