--- a/app/src/main/res/values-ar/arrays.xml
+++ b/app/src/main/res/values-ar/arrays.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string-array name="preference_values_method">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+    </string-array>
+
     <string-array name="preference_entries_method">
         <item>الشيعة الإثنا عشرية</item>
         <item>جامعة العلوم الإسلامية بكراتشي</item>
@@ -11,9 +22,20 @@
         <item>معهد فيزياء الأرض بجامعة طهران</item>
     </string-array>
 
+    <string-array name="preference_values_school">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
     <string-array name="preference_entries_school">
         <item>المذهب الشافعي</item>
         <item>المذهب الحنفي</item>
+    </string-array>
+
+    <string-array name="preference_values_latitude">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
     </string-array>
 
     <string-array name="preference_entries_latitude">
