--- a/app/src/main/res/layout-sw600dp/no_places_message.xml
+++ b/app/src/main/res/layout-sw600dp/no_places_message.xml
@@ -12,12 +12,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:padding="@dimen/basic_padding">
 
         <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             card_view:cardCornerRadius="2dp"
             card_view:cardElevation="2dp"
             card_view:cardUseCompatPadding="true">
@@ -65,8 +66,9 @@
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             card_view:cardCornerRadius="2dp"
             card_view:cardElevation="2dp"
             card_view:cardUseCompatPadding="true">
