--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -42,6 +42,10 @@
             android:key="@string/preference_key_libraries"
             android:title="@string/preference_title_libraries" />
 
+        <Preference
+            android:key="@string/preference_key_design"
+            android:title="@string/preference_title_design" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
